2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b4

	* Fix: Display the 'view comments in nested album' links for all users
	  in commentboxtop.inc.  This was restricted to admin/owner only, so it
	  broke navigation when view comments was allowed for all users.

	* Change: Fix uninitialized variable notice

2004-07-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b3

	* Fix: Trim trailing spaces from setup vars where no-trailing-slash is
	  set.  This prevents the "/usr/bin /pnmtojpeg" issue

2004-07-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b2

	* Fix: The addition of the 'view comments' for everyone was exposing
	  hidden photos since view_comments.php had been written with only
	  the owner/admin in mind.

2004-07-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC4-cvs-b1

        * Change: Remove bastard newlines from delete_user and delete_album that were causing
          jscript errors in Firefox.

2004-07-25  Chris Kelly <ckdake@users.sf.net> 1.4.4-RC3

	* 1.4.4-RC3 Release

2004-07-24  Jens A. Tkotz <jens@peino.de>  1.4.4-RC3-cvs-b10

	* Fix: Redirect in multi_create_user didnt worked after successfull adding.
	       Reason: doctype header was set before redirect header.

2004-07-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC3-cvs-b9

        * Fix: Skins will be ignored when embedded.  This was causing a lot
          of display issues for users due to skin colors conflicting with
          embedding-system colors.

2004-07-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC3-cvs-b8

	* Fix?: Revert an earlier checkin (b100?) that prevented a PHP notice
	  when first loading sessions while embedded.  Some users report not
	  getting a session at all in postnuke.  Since postnuke was the original
	  problem, I'm confused, but this will work.  Supressing the notice using
	  @session_start()

2004-07-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC3-cvs-b7
